--- a/AZ-500/mod02-02-08-nva.md
+++ b/AZ-500/mod02-02-08-nva.md
@@ -1,1 +1,20 @@
 # ネットワーク仮想アプライアンス(NVA)
+
+[仮想アプライアンス(NVA)](https://azure.microsoft.com/ja-jp/solutions/network-appliances/)
+
+Network Virtual Appliance（NVA）は、下記のような機能を提供するAzure VMです。
+
+- Web アプリケーション ファイアウォール (WAF)
+- ファイアウォール
+- ゲートウェイ/ルーター
+- アプリケーション配信コントローラー (ADC)
+- WAN オプティマイザー
+
+製品例：Barracuda, Check Point, Cisco, Citrix, F5, Fortinet, NetApp, Paloalto, Trend Microなどの製品があります。
+
+Azure Marketplaceからデプロイすることができます。
+
+[NVAは、VNetにデプロイすることができます](https://docs.microsoft.com/ja-jp/learn/modules/control-network-traffic-flow-with-routes/)。
+
+VMから送信されるトラフィックをNVAでフィルタリングしてからインターネットに送信したり、インターネットからのトラフィックをNVAでフィルタリングしてからVMに送信したりする場合は、「カスタム ルート」を使用して、トラフィックがNVAを経由するようにします。
+
