--- a/AZ-500/mod02-02-02-asg.md
+++ b/AZ-500/mod02-02-02-asg.md
@@ -1,1 +1,63 @@
-# アプリケーションセキュリティグループ
+# アプリケーション セキュリティ グループ (ASG)
+
+[2018/3/30～ GA](https://azure.microsoft.com/ja-jp/updates/applicationsecuritygroupsga/)
+
+ASG を使用すると、明示的な IP アドレスではなく、ワークロード、アプリケーション、または環境に基づいてきめ細やかなネットワーク セキュリティ ポリシーを定義できます。
+
+[ドキュメント（概要）](https://docs.microsoft.com/ja-jp/azure/virtual-network/application-security-groups)
+
+[ドキュメント（作成方法）](https://docs.microsoft.com/ja-jp/azure/virtual-network/tutorial-filter-network-traffic#create-application-security-groups)
+
+[くらう道](https://www.cloudou.net/virtual-network/vnet015/)
+
+アプリケーション セキュリティ グループを使用すると、Web サーバーなど、同様の機能を持つサーバーをグループ化できます。
+
+仮想マシンをグループ化して、それらのグループに基づくネットワーク セキュリティ ポリシーを定義できます。
+
+# [メリット](https://docs.microsoft.com/ja-jp/azure/virtual-network/network-security-groups-overview#application-security-groups)
+
+- NSGに具体的なIPアドレスを書く必要がなくなる。
+- NSGの数を減らせる。
+
+アプリケーション セキュリティ グループを使用すると、ネットワーク セキュリティをアプリケーションの構造の自然な拡張として構成でき、仮想マシンをグループ化して、それらのグループに基づくネットワーク セキュリティ ポリシーを定義できます。
+
+明示的な IP アドレスを手動でメンテナンスせずに、大きなセキュリティ ポリシーを再利用することができます。
+
+# ASGの作成
+
+サブスクリプションとリソースグループの下につくる（普通のリソース）。
+
+名前、サブスクリプション、リソースグループ、場所（リージョン）を指定して作成。
+
+作成時点では特に関連付けなどは指定しない。
+
+# NICとの関連付け
+
+[ネットワークンターフェースをASGに関連付けすることができます。](https://docs.microsoft.com/ja-jp/azure/virtual-network/tutorial-filter-network-traffic#associate-network-interfaces-to-an-asg)
+
+VM＞ネットワーク＞ASG で、ASGを選択。
+
+ネットワーク インターフェイスは[複数のアプリケーション セキュリティ グループのメンバーにすることができます](https://docs.microsoft.com/ja-jp/azure/virtual-network/application-security-groups)。
+
+
+# NSGの宛先でのASG指定
+
+[NSGの「セキュリティ規則」の「ソース」または「宛先」に、ASGを指定できます。](https://docs.microsoft.com/ja-jp/azure/virtual-network/network-security-groups-overview#security-rules)
+
+[1つの規則内で複数のASGを指定することはできない。](https://docs.microsoft.com/ja-jp/azure/virtual-network/network-security-groups-overview#security-rules)
+
+[実際の設定例](https://docs.microsoft.com/ja-jp/azure/virtual-network/tutorial-filter-network-traffic#create-security-rules)
+
+# 制約等
+
+セキュリティ規則のソースおよび宛先として、1 つのアプリケーション セキュリティ グループを指定できます。 
+
+送信元と送信先に複数のアプリケーション セキュリティ グループを指定することはできません。
+
+All network interfaces assigned to an application security group have to exist in the same virtual network that the first network interface assigned to the application security group is in. (ASGに割り当てられたすべてのNICは、ASGに割り当てられた最初のNICと同じVNetに存在する必要があります)
+
+※たとえば、あたらしいASGをつくり、VNet1のNIC1に関連付けたとする。続いて、NIC2を同じASGに関連付ける場合、NIC2はVNet1に存在しなければならない。ASG作成時点では、ASGそのものには「どのVNetのASG」といった情報は指定しないが、ASGに複数NICを含める場合、それらは全部同じVNetになければならない。ということ。
+
+セキュリティ規則のソースおよび宛先としてアプリケーション セキュリティ グループを指定する場合、両方のアプリケーション セキュリティ グループのネットワーク インターフェイスが、同じ仮想ネットワークに存在している必要があります。 
+
+
