--- a/AZ-500/mod02-03-02-paw.md
+++ b/AZ-500/mod02-03-02-paw.md
@@ -1,4 +1,4 @@
-※本ページの一次情報は2021/1現在、Microsoft Docsからは削除されてしまっているが、[Googleキャッシュ(2020/12/17取得時点のもの)で読むことができる](https://webcache.googleusercontent.com/search?q=cache:W_2CyuTTNacJ:https://docs.microsoft.com/ja-jp/windows-server/identity/securing-privileged-access/privileged-access-workstations+&cd=1&hl=ja&ct=clnk&gl=jp)。
+~~※本ページの一次情報は2021/1現在、Microsoft Docsからは削除されてしまっているが、[Googleキャッシュ(2020/12/17取得時点のもの)で読むことができる](https://webcache.googleusercontent.com/search?q=cache:W_2CyuTTNacJ:https://docs.microsoft.com/ja-jp/windows-server/identity/securing-privileged-access/privileged-access-workstations+&cd=1&hl=ja&ct=clnk&gl=jp)。~~ 2021/3/24現在、Googleのキャッシュからも削除されている。
 
 # 特権アクセス ワークステーション
 
