--- a/AZ-500/mod02/mod02-02.md
+++ b/AZ-500/mod02/mod02-02.md
@@ -1,24 +1,164 @@
 
 # ネットワークセキュリティグループ（NSG）
 
+https://docs.microsoft.com/ja-jp/azure/virtual-network/network-security-groups-overview
+
+ネットワークセキュリティグループ
+- 名前
+- セキュリティ規則
+  - 受信セキュリティ規則
+    - ユーザーが追加する規則...
+    - デフォルトの規則...
+  - 送信セキュリティ規則
+    - ユーザーが追加する規則...
+    - デフォルトの規則...
+
+各規則のプロパティ (Azure portalの表示順)
+- ソース - Any / IPアドレス or CIDRブロック / サービス タグ / ASG
+- ソースポート範囲 - * 等
+- 宛先 - Any / IPアドレス or CIDRブロック / サービス タグ / ASG
+- サービス - HTTP等 (選択すると、プロトコルと宛先ポートが自動入力される)
+- プロトコル Any / TCP / UDP / ICMP
+- 宛先ポートの範囲 80 / 80-81 / 80,81 / 80,81-82 / * など
+- アクション: 許可 / 拒否
+- 優先度 100～4096, 小さいほど優先度が高い
+- 名前: 作成後の変更は不可!!
+- 説明
+
+受信セキュリティ規則のデフォルトの規則
+- 65000 AllowVnetInBound
+  - ソース: VirtualNetwork
+  - 宛先: VirtualNetwork
+- 65001 AllowAzureLoadBalancerInBound
+  - ソース: AzureLoadBalancer
+  - 宛先: 任意
+- 65500 DenyAllInBound
+  - ソース: 任意
+  - 宛先: 任意
+
+送信セキュリティ規則のデフォルトの規則
+- 65000 AllowVnetOutBound
+  - ソース: VirtualNetwork
+  - 宛先: VirtualNetwork
+- 65001 AllowInternetOutBound
+  - ソース: 任意
+  - 宛先: Internet
+- 65500 DenyAllOutBound
+  - ソース: 任意
+  - 宛先: 任意
+
+関連付け
+- ネットワークインターフェース(NIC)
+- サブネット
+
+受信トラフィックの規則の処理
+- サブネットに関連付けられているNSGがあれば、まずその規則を処理
+- 次にNICに関連付けられているNSGがあれば、その規則を処理
+- ※サブネットにもNICにもNSGの関連付けがない場合は、トラフィックはすべて許可される
+
+送信トラフィックの規則の処理
+- NICに関連付けられているNSGがあれば、その規則を処理
+- 次にサブネットに関連付けられているNSGがあれば、その規則を処理
+- ※NICにもサブネットにもNSGの関連付けがない場合は、トラフィックはすべて許可される
+
+サブネット内のトラフィック
+- サブネットに関連付けたNSGのセキュリティ規則は、サブネットの内部にあるVM間の接続に影響する。
+- 例: SSH接続を拒否するルールを持つNSGをサブネットに関連付ける
+  - サブネットの外からサブネットの中のVMにSSH接続ができなくなる。
+  - サブネット内で、あるVMから別のVMへのSSH接続もできなくなる。
+
+# サービス タグ
+
+https://docs.microsoft.com/ja-jp/azure/virtual-network/service-tags-overview
+
+- AzureサービスのIPアドレス プレフィックスのグループ
+- NSG, Azure Firewall, ユーザー定義ルートで使用できる
+- 例
+  - AppService (WebアプリとFunctions)
+  - AzureCosmosDB
+  - AzureBackup
+  - Storage - Azure Storage （特定のストレージアカウントは表さない）
+  - Sql - SQL Database等（特定のインスタンスは表さない）
+  - AzureCloud - すべてのデータセンター パブリック IP アドレス
+  - Internet
+  - VirtualNetwork
+
 # アプリケーションセキュリティグループ（ASG）
 
+https://docs.microsoft.com/ja-jp/azure/virtual-network/application-security-groups
+
+- VM をグループ化して名前をつける
+- NSGのソース/宛先として使用できる
+- NSGに、VMのIPアドレスを書かなくてよくなる
 
 # ラボ 07: ネットワーク セキュリティ グループとアプリケーション セキュリティ グループ
 
 - 60min
 - Azure Passサブスクリプションを使用します
 - 手順書: https://microsoftlearning.github.io/AZ-500JA-AzureSecurityTechnologies/
-- 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab06.md
+- 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab07.md
 
 
+# サービスエンドポイント / プライベートリンク
 
-# サービスエンドポイント
+[まとめ資料](https://github.com/hiryamada/notes/blob/main/AZ-104/pdf/mod06/%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%82%A8%E3%83%B3%E3%83%89%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88vs%E3%83%97%E3%83%A9%E3%82%A4%E3%83%99%E3%83%BC%E3%83%88%E3%82%A8%E3%83%B3%E3%83%89%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88.pdf)
 
-# プライベートリンク
+# Application Gateway
 
-# Azure Application Gateway
+https://docs.microsoft.com/ja-jp/azure/application-gateway/overview
 
-# Azure Web Application Firewall (WAF)
+- レイヤー 7 (HTTP/HTTPS 層) で動作
+- [正常性プローブ](https://docs.microsoft.com/ja-jp/azure/application-gateway/application-gateway-components#health-probes)
+- [URLパスベースのルーティング](https://docs.microsoft.com/ja-jp/azure/application-gateway/features#url-based-routing)
+- [複数サイトのホスティング](https://docs.microsoft.com/ja-jp/azure/application-gateway/features#multiple-site-hosting)
+- [TLSターミネーション / エンドツーエンドTLS](https://docs.microsoft.com/ja-jp/azure/application-gateway/ssl-overview)
+- WAFを利用可能
+- ゾーン冗長をサポート. 複数の可用性ゾーンにまたがってデプロイ。
+
+# Azure Web Application Firewall
+
+https://docs.microsoft.com/ja-jp/azure/web-application-firewall/overview
+
+- Webアプリケーションファイアウォールのサービス。
+- SQL インジェクション攻撃やクロスサイト スクリプティング攻撃から、Webアプリを保護
+- 以下のサービスと組み合わせて利用できる
+  - Azure Application Gateway
+  - Azure Front Door
+  - Azure Content Delivery Network (CDN) 
+
+■WAFのモード
+
+- 検出モード（Detection mode）
+  - すべての脅威アラートを監視してログに記録
+  - リクエストをブロックしない
+- 防止モード（Prevention mode）
+  - 規則で検出された侵入や攻撃のリクエストをブロックする
+  - WAFログにも記録
+
+本番環境では、まず検出モードでしばらく運用し、例外やカスタムルールを設定してから、防止モードにするとよい。
 
 # Azure Front Door
+
+https://docs.microsoft.com/ja-jp/azure/frontdoor/front-door-overview
+
+- レイヤー 7 (HTTP/HTTPS 層) で動作
+- 正常性プローブ
+- URLパスベースのルーティング
+- SSLオフロード、証明書管理
+- カスタム ドメインを利用可能
+- WAFを利用可能
+
+# 参考: Azure Front Door Standard / Premium
+
+https://docs.microsoft.com/ja-jp/azure/frontdoor/standard-premium/overview
+
+[こちらのPDFの10ページを参照](https://github.com/hiryamada/notes/blob/main/AZ-204/pdf/mod13/Azure%20CDN%E3%81%BE%E3%81%A8%E3%82%81.pdf)
+
+（従来の）Azure Front Door、Azure CDN、Azure WAFの機能を統合したもの。現在プレビュー中。
+
+# ExpressRoute / ExpressRoute Direct
+
+[まとめ資料](https://github.com/hiryamada/notes/blob/main/AZ-500/pdf/mod2/ExpressRoute%E3%81%BE%E3%81%A8%E3%82%81.pdf)
+
+
+
