--- a/AZ-500/mod02/mod02-03.md
+++ b/AZ-500/mod02/mod02-03.md
@@ -1,1 +1,148 @@
+# このセクションで学習すること
+
+- エンドポイントとは
+- エンドポイント保護とは
+- マルウェアとは
+- マルウェア対策の方法
+- 仮想マシンのセキュリティ対策
+  - テンプレートによる仮想マシンの定期的な再作成
+  - Azure Automationによる更新の自動化
+  - ディスクの暗号化
+- Azure Security Centerの「推奨事項」の活用
+
+# エンドポイント保護
+
+■エンドポイントとは？
+
+（一般的には）端点、終点、末端。接続口。
+
+（このモジュールでの定義としては）ユーザーと直接対話するコンピューターシステム。要するにVM（Azure仮想マシン）
+
+
+■エンドポイント保護とは？
+
+ユーザーが使用するデバイス（ノートPC等）の保護。
+
+
+■マルウェアとは？
+
+- 不正かつ有害に動作させる意図で作成された悪意のあるソフトウェアや悪質なコードの総称。
+- コンピュータウイルスやワームなど.
+
+■マルウェア対策
+
+Microsoft Antimalware
+https://docs.microsoft.com/ja-jp/azure/security/fundamentals/antimalware
+
+- VMの拡張機能としてインストール可能
+- リアルタイムの保護機能であり、ウイルス、スパイウェア、その他の悪意のあるソフトウェアを特定して削除するのに役立ちます。悪意のある、または望ましくない既知のソフトウェアがシステム上で自らをインストールまたは実行しようとするときに出される構成可能なアラートを備えています。
+
+
+# 参考: 特権アクセスデバイス戦略
+
+https://docs.microsoft.com/ja-jp/security/compass/privileged-access-devices
+
+# 参考: 特権アクセスワークステーション
+
+[参考](../mod02-03-02-paw.md)
+
+- 「機密性の高いタスク」専用のワークステーション。
+- アプリケーションを明確に制御する機能とアプリケーション保護を備えた、セキュリティが強化されたワークステーション
+
+# 仮想マシンテンプレート
+
+(ARMテンプレートについては、モジュール1 エンタープライズガバナンスで説明済み)
+
+セキュリティが強化された VM OS を強制的にデプロイするために、VM を定期的に再デプロイすることをお勧めします。
+
+# リモートアクセス管理
+
+- RDP
+- SSH
+- Azure Bastion
+
+# 仮想マシンの更新
+
+
+■Azure Automationとは？
+
+https://docs.microsoft.com/ja-jp/azure/automation/automation-intro
+
+- Azure 環境と非 Azure 環境を一貫性をもって管理する、オートメーションと構成のサービス
+- プロセスの自動化が可能
+  - [Runbook(PowerShellスクリプト等)実行](https://docs.microsoft.com/ja-jp/azure/automation/automation-runbook-gallery)
+- 構成管理が可能
+  - [Azure Automation State Configuration](https://docs.microsoft.com/ja-jp/azure/automation/automation-dsc-overview)
+  - 変更履歴を記録
+  - インベントリを管理する
+  - DSC（Desired State Configuration）を使って構成を適用する 
+
+■Azure AutomationのUpdate Management
+
+https://docs.microsoft.com/ja-jp/azure/automation/update-management/overview
+
+- Azure、オンプレミス環境、およびその他のクラウド環境で、Azure での Windows と Linux 仮想マシンに対するオペレーティング システムの更新プログラムを管理
+- すべてのエージェント マシンで利用可能な更新プログラムの状態をすばやく評価し、サーバーに必要な更新プログラムをインストールするプロセスを管理
+
+
+わかりやすい解説
+- https://tech-blog.cloud-config.jp/2019-12-26-azure-update-management-deploy
+- https://www.atmarkit.co.jp/ait/articles/1802/09/news013.html
+
+# ディスクの暗号化
+
+Azure Disk Encryption
+
+https://docs.microsoft.com/ja-jp/azure/virtual-machines/disk-encryption
+
+- Windows
+  - [Bitlocker](https://ja.wikipedia.org/wiki/BitLocker)を使用した暗号化
+- Linux
+  - [DM-Crypt](https://wiki.gentoo.org/wiki/Dm-crypt/ja)を使用した暗号化
+
+Azure Key Vaultと統合されている。ディスク暗号化キーをAzure Key Vaultで管理。
+
+# Windows Defender
+
+https://support.microsoft.com/ja-jp/windows/windows-%E3%82%BB%E3%82%AD%E3%83%A5%E3%83%AA%E3%83%86%E3%82%A3%E3%81%AB%E3%82%88%E3%82%8B%E4%BF%9D%E8%AD%B7%E3%82%92%E5%88%A9%E7%94%A8%E3%81%97%E3%81%BE%E3%81%99-2ae0363d-0ada-c064-8b56-6a39afb6a963
+
+- Windows セキュリティは Windows 10 に組み込まれており、Windows Defender ウイルス対策というウイルス対策プログラムが含まれている。
+- 別のウイルス対策アプリがインストールされている場合、Windows Defender ウイルス対策は自動的にオフになる。
+- 他のウイルス対策アプリをアンインストールすると、Microsoft Defender ウイルス対策が自動的に有効になる。
+
+# Azure Security Centerの推奨事項
+
+https://docs.microsoft.com/ja-jp/azure/security-center/security-center-recommendations
+
+■Azure Security Centerとは？
+
+- Azureに組み込まれた、統合的なセキュリティ管理システム
+- くわしくはモジュール4で解説
+
+■Azure Security Centerの推奨事項とは？
+
+- 継続的な評価を行い、セキュリティに関する推奨事項を表示する機能
+- Azure リソースを定期的に分析し、見つかった脆弱性に対するアクションを推奨事項として提案してくれる
+- 例: [コンピューティングの推奨事項](https://docs.microsoft.com/ja-jp/azure/security-center/recommendations-reference#compute-recommendations)
+  - Azure Backupの有効化
+  - Azure Disk Encryptionによるディスクの暗号化
+  - エンドポイント保護（Windows Defender等）のインストール
+
+# 「Azure セキュリティ ベンチマーク」 による Azure ワークロードのセキュリティ保護
+
+https://azure.microsoft.com/ja-jp/blog/monitor-your-azure-workload-compliance-with-azure-security-benchmark/
+
+- 90 を超えるセキュリティのベスト プラクティスの推奨事項のコレクション
+- 全体的なセキュリティとコンプライアンスを向上させることができる
+
+https://docs.microsoft.com/ja-jp/azure/security-center/update-regulatory-compliance-packages#what-regulatory-compliance-standards-are-available-in-security-center
+
+- Microsoft が作成した、一般的なコンプライアンス フレームワークに基づくセキュリティとコンプライアンスのベスト プラクティスに関する Azure 固有のガイドライン
+- 既定で、すべてのサブスクリプションに Azure セキュリティ ベンチマーク が割り当てられている
+- Azure Policyの「イニシアチブ」として実装されている。
+
+Azure Security Centerでの設定確認
+
+- Azure portal＞セキュリティ センター＞クラウド セキュリティ＞規制コンプライアンス＞コンプライアンス ポリシーの管理
+- デフォルトで、「Azure Security Benchmark」が有効化されている。
 
