--- a/AZ-500/mod02/mod02-04.md
+++ b/AZ-500/mod02/mod02-04.md
@@ -1,7 +1,32 @@
+# このセクションで学習すること
+
+- コンテナーのセキュリティ
+
+# コンテナー
+
+# ACI セキュリティ
+
+# Azure Container Instances
+
+# Azure Container Registry (ACR)
+
+# Azure Container Registry での認証
+
+# Azure Kubernetes Service (AKS)
+
+# AKS アーキテクチャ
+
+# AKS ネットワーク
+
+# AKS のストレージ
+
+# AKS と Active Directory
+
+# AKS と RBAC
 
 # ラボ 09: ACR と AKS の構成とセキュリティ保護
 
 - 60min
 - Azure Passサブスクリプションを使用します
 - 手順書: https://microsoftlearning.github.io/AZ-500JA-AzureSecurityTechnologies/
-- 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab08.md
+- 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab09.md
