--- a/AZ-500/mod02/mod02-04.md
+++ b/AZ-500/mod02/mod02-04.md
@@ -1,28 +1,146 @@
 # このセクションで学習すること
 
-- コンテナーのセキュリティ
+- コンテナー型仮想化のセキュリティ
+- Azure Container Instances (ACI) のセキュリティ
+- Azure Container Registry (ACR) のセキュリティ
+- Azure Kubernetes Service (AKS) のセキュリティ
 
-# コンテナー
+# Docker / Kubernetes
 
-# ACI セキュリティ
+本コース AZ-500 はセキュリティに特化したコースであるため、コンテナー型仮想化、Docker、Kubernetesの入門的な解説は省略する。
 
-# Azure Container Instances
+必要に応じて、以下の公式サイトや、市販の書籍を参照のこと。
+
+- Docker: https://docs.docker.jp/get-started/overview.html
+- Kubernetes: https://kubernetes.io/ja/docs/concepts/overview/what-is-kubernetes/
+- [コンテナー型仮想化](https://www.google.com/search?q=%E3%82%B3%E3%83%B3%E3%83%86%E3%83%8A%E3%83%BC%E5%9E%8B%E4%BB%AE%E6%83%B3%E5%8C%96)
+
+AZ-104 Administrator や AZ-204 Developer のコースでは、これらについて解説している。
+
+# コンテナー型仮想化のセキュリティについて（分離）
+
+- あるコンピュータの上で、2つのVMを実行する場合
+- あるコンピュータの上で、2つのコンテナーを実行する場合
+
+コンテナーでは、VMほど強力な「分離」（セキュリティ境界）は提供されない。
+
+コンテナーの実行環境に、悪意のあるコンテナーが紛れ込むと、他のコンテナーや、ホストOSに、影響が及ぶ可能性がある。
+
+参考: [コンテナーランタイム(runC)の脆弱性により、あるコンテナの中で特定の処理をするだけでホストOSの特権が取れてしまうケースがあった](https://www.publickey1.jp/blog/20/firecrackergvisorunikernel_container_runtime_meetup_2.html)
+
+参考: [Docker Hubには「疑わしい」コンテナイメージが含まれている](https://www.infoq.com/jp/news/2020/09/Malicious-Container-Images/). 仮想通貨のマイニングや、リモートからのコマンド実行など。
+
+# コンテナー型仮想化におけるセキュリティ対策
+
+※Skillpipeテキストのタイトルは「ACIセキュリティ」となっているが、その内容は、ACIに限らない。ここでは、コンテナー一般のセキュリティ対策について解説する。
+
+- 強力な「分離」が利用できるコンテナー実行環境の利用。
+  - Azure Container Instances (ACI)では「ハイパーバイザーレベルのセキュリティが提供される（VM と同じレベルで、各アプリケーションが分離される）
+- コンテナーに対してセキュリティスキャンを実行する
+  - Azure Container Registry (ACR)を使用して、スキャンを実行できる（後述）
+- 信頼できるコンテナーレジストリ（イメージの配布元）を使用する
+  - Azure Container Registry (ACR)を使用して、プライベートなレジストリを運用することができる.
+- イメージに署名する
+  - Azure Container Registry で、レジストリにプッシュされたイメージに署名することができる
+  - イメージ の利用者は署名済みイメージのみをプルできる
+- コンテナー内に機密情報を格納しない
+  - 機密情報はAzure Key Vaultに格納する
+- ランタイムで最小特権を使用する / 不要な特権を削除する
+  - 参考: [Dockerデーモンをルートレスで実行（Rootlessモード）](https://docs.docker.jp/engine/security/rootless.html)
+
+# Azure Container Instances (ACI)
+
+https://docs.microsoft.com/ja-jp/azure/container-instances/container-instances-overview
+
+Azure で、最もすばやくコンテナーを実行する方法を提供するサービス。
+
+Kubernetesによるコンテナーオーケストレーションが不要な場合や、簡単なタスクをコンテナー上で実行したい場合に利用する。
+
+※Azure portalでは「aci」または「コンテナー インスタンス」と検索。
+
+■ACIの特徴（セキュリティに関連する機能を中心に紹介）
+
+- ハイパーバイザーレベルのセキュリティ
+  - ACIでは、ハイパーバイザーレベルのセキュリティが提供される。
+  - VM と同じレベルで、各アプリケーションが分離される。
+- 仮想ネットワークへの展開
+  - コンテナーインスタンスを仮想ネットワーク（のサブネット）にデプロイできる
+  - コンテナーインスタンスから、VNet内のVMなどに接続可能
+  - VPNやExpressRouteを使用して、オンプレミスからコンテナーインスタンスに接続可能
 
 # Azure Container Registry (ACR)
 
-# Azure Container Registry での認証
+https://docs.microsoft.com/ja-jp/azure/container-registry/container-registry-intro
+
+- プライベートな Docker レジストリ サービス
+- Docker コンテナー イメージおよび関連する成果物を保存、管理する
+
+※Azure portalでは「コンテナー レジストリ」と検索。
+
+■SKU
+
+上位の SKU を選択すると、高いパフォーマンスとスケーリング、追加機能が提供される。
+
+- Basic
+- Standard
+- Premium
+  - プライベートエンドポイント接続
+  - カスタマーマネージドキーによる暗号化
+
+■コマンド
+
+az acrコマンド - レジストリの操作に使用。az acr login, az acr build など。
+
+dockerコマンド - レジストリに対するイメージのプッシュやプルに使用。docker push, docker pull など。
+
+■Azure Container Registry での認証
+
+https://docs.microsoft.com/ja-jp/azure/container-registry/container-registry-authentication
+
+ACRは「プライベートなレジストリ」である。つまり、使用する前に認証が必要。
+
+- Azure ADでの個々のログイン
+  - 開発者が、自分のAzure ADユーザーとしてサインインして、ACRを使用するための方法。
+    - `az login`
+  - ACRにログインする
+    - `az acr login --name レジストリ名.azurecr.io`
+    - このログイン（トークン）は3時間有効。有効期限が切れたら再度`az acr login`を実行する。
+  - 以降, docker コマンドでACRを利用できる
+- サービス プリンシパルによる ACR 認証
+  - レジストリに対するプル、プッシュとプル、またはその他のアクセス許可を持つ「サービスプリンシパル」を作成するための方法。
+  - 人間ではなく、スクリプトなどで使用（自動化、無人化、ヘッドレス）
+  - 「サービス プリンシパル」を作成し、acrpull / acrpush / owner などのロールを割り当てる
+    - `az ad sp create-for-rbac --name サービスプリンシパル名 --scope レジストリのID --role acrpull --query password`
+  - 上記コマンドで指定したサービスプリンシパル名と、出力されたパスワードを使って、ACIでイメージをプルして実行する例
+    - `az container create --registory-login-server レジストリ名.azurecr.io --registry-username サービスプリンシパル名 --registory-password パスワード`
+- 管理者アカウント
+  - デフォルトでは無効
+  - Azure portal＞コンテナー レジストリ＞アクセスキー＞管理者ユーザー を「有効」にする
+  - レジストリに対する完全なアクセス権がある
+  - `docker login レジストリ名.azurecr.io` に続き、ユーザー名とパスワードを入力
+
+■脆弱性スキャン(Azure Security Centerとの統合)
+
+https://azure.microsoft.com/ja-jp/updates/vulnerability-scanning-for-images-in-azure-container-registry-is-now-generally-available/
+
+https://docs.microsoft.com/ja-jp/azure/security-center/defender-for-container-registries-introduction
+
+- ACR にイメージをプッシュすると、Azure Security Center によってそのイメージが自動的にスキャンされ、パッケージまたはファイルで定義されている依存関係の既知の脆弱性が確認される。
+- スキャンが完了すると(通常2分以内)、検出された各脆弱性の詳細およびセキュリティの分類と共に、問題を修正して脆弱な攻撃面を保護する方法についてのガイダンスが Azure Security Center によって提供される。
+- この機能は、情報セキュリティの主要プロバイダーである Qualys によって提供されている。(Qualysスキャナー)
 
 # Azure Kubernetes Service (AKS)
 
-# AKS アーキテクチャ
+https://docs.microsoft.com/ja-jp/azure/aks/intro-kubernetes
 
-# AKS ネットワーク
+Azureで、マネージド型のKubernetesクラスターを運用するためのサービス。
 
-# AKS のストレージ
+※Azure portalでは「aks」または「Kubernetes サービス」と検索。
 
-# AKS と Active Directory
+■ AKS アーキテクチャ/ネットワーク/ストレージ
 
-# AKS と RBAC
+以下資料を参照。
+https://github.com/hiryamada/notes/blob/main/AZ-400/mod16.md
 
 # ラボ 09: ACR と AKS の構成とセキュリティ保護
 
@@ -30,3 +148,7 @@
 - Azure Passサブスクリプションを使用します
 - 手順書: https://microsoftlearning.github.io/AZ-500JA-AzureSecurityTechnologies/
 - 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab09.md
+
+# その他
+
+参考: [CIで簡単につかえるコンテナのセキュリティ診断｢Dockle｣](https://qiita.com/tomoyamachi/items/bb6ac5788bb734c91282)
