--- a/AZ-500/mod02/mod02-03.md
+++ b/AZ-500/mod02/mod02-03.md
@@ -21,8 +21,7 @@
 
 ■エンドポイント保護とは？
 
-ユーザーが使用するデバイス（ノートPC等）の保護。
-
+（このモジュールでの定義としては）VMの保護。
 
 ■マルウェアとは？
 
@@ -34,7 +33,7 @@
 Microsoft Antimalware
 https://docs.microsoft.com/ja-jp/azure/security/fundamentals/antimalware
 
-- VMの拡張機能としてインストール可能
+- Azure VMの拡張機能としてインストール可能
 - リアルタイムの保護機能であり、ウイルス、スパイウェア、その他の悪意のあるソフトウェアを特定して削除するのに役立ちます。悪意のある、または望ましくない既知のソフトウェアがシステム上で自らをインストールまたは実行しようとするときに出される構成可能なアラートを備えています。
 
 
