--- a/AZ-500/mod02/mod02-03.md
+++ b/AZ-500/mod02/mod02-03.md
@@ -67,6 +67,8 @@ https://docs.microsoft.com/ja-jp/security/compass/privileged-access-devices
 
 https://docs.microsoft.com/ja-jp/azure/automation/automation-intro
 
+[解説資料](https://github.com/hiryamada/notes/blob/main/AZ-400/mod13.md#azure-automation)
+
 - Azure 環境と非 Azure 環境を一貫性をもって管理する、オートメーションと構成のサービス
 - プロセスの自動化が可能
   - [Runbook(PowerShellスクリプト等)実行](https://docs.microsoft.com/ja-jp/azure/automation/automation-runbook-gallery)
