--- a/AZ-500/mod03/mod03-04.md
+++ b/AZ-500/mod03/mod03-04.md
@@ -1,18 +1,67 @@
-データベースセキュリティ
+データベース セキュリティ
+
+■Azure SQLのファミリー
+
+比較表
+https://docs.microsoft.com/ja-jp/azure/azure-sql/azure-sql-iaas-vs-paas-what-is-overview#comparison-table
+
+- Azure SQL Database
+  - PaaS (DBaaS)
+  - 99.995% 可用性
+  - 最もよく使用されるSQL Server機能を利用できる（＝互換性は高くない）
+- Azure SQL Managed Instance
+  - PaaS
+  - SQL Serverとの高い互換性
+  - 99.99% 可用性
+- SQL server on Virtual Machines
+  - IaaS
+  - 最大 99.99% の可用性
+  - オンプレミスの SQL Serverとの完全な互換性
+
+# SQL Database 認証
+
+https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#authentication
+
+# SQL Database ファイアウォール
+
+https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#network-security
+
+■ファイアウォールの種類
+
+- [IP ファイアウォール規則](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/firewall-configure)
+  - 各要求の送信元 IP アドレスに基づいてデータベースへのアクセス権を付与
+  - データベース レベルの IP ファイアウォール規則
+  - サーバーレベルの IP ファイアウォール規則
+- [仮想ネットワーク ファイアウォールの規則](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/vnet-service-endpoint-rule-overview)
+  - 仮想ネットワーク内の特定のサブネットから送信される通信を許可するかどうかを制御
+  - サーバー レベルにのみ適用
+
+■[IPファイアウォールの評価の順序](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/firewall-configure#how-the-firewall-works)
+
+- データベース レベルの IP ファイアウォール規則で許可されたIPからのアクセスであれば、そのデータベースに接続可能
+- サーバーレベルの IP ファイアウォール規則で許可されたIPからのアクセスであれば、サーバーに接続可能
+- いずれでもない場合は接続が不可能
+
+可能な限り、データベース レベルの IP ファイアウォール規則を使用することが推奨されている。
+
 
 # Elastic Pool
 
+[PDF資料](../pdf/mod3/Elastic%20Pool.pdf)
+
 - 予期できない多様な使用ニーズを持つ複数のデータベースを管理しスケーリングするための、シンプルでコスト効率の高いソリューション
-- エラスティック プール内のデータベースは、単一のサーバー上にあり、リソースを共有
+- エラスティック プール内のデータベースは、単一のサーバー上にあり、プールのリソースを共有
 
 **Azure SQL Databaseでのみサポート**
 
 # 購入モデル
 
-- DTU ベース	
-- 仮想コアベース
+https://docs.microsoft.com/ja-jp/azure/azure-sql/database/purchasing-models
 
-- DTUベースは **Azure SQL Databaseでのみサポート。Azure SQL Managed Instancesではサポートされない**
+- [仮想コアベース](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/service-tiers-sql-database-vcore)
+  - 推奨
+- [DTU ベース](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/service-tiers-dtu)
+  - **Azure SQL Databaseでのみサポート。Azure SQL Managed Instancesではサポートされない**
 
 # DTUとは
 
@@ -36,7 +85,6 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/service-tiers-dtu
   - インメモリOLTPをサポート
   - 列ストアインデックス作成をサポート
 
-
 # データの検出と分類
 
 https://docs.microsoft.com/ja-jp/azure/azure-sql/database/data-discovery-and-classification-overview
@@ -47,7 +95,7 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/data-discovery-and-cla
 # TLS
 
 - SQL Database、SQL Managed Instance、Azure Synapse Analytics では、すべての接続に対して常に暗号化 (SSL/TLS) が適用される。
-- 接続文字列での Encrypt または TrustServerCertificate の設定に**関係なく**、すべてのデータがクライアントとサーバー間の "移動中" に暗号化されることが保証される
+- 接続文字列での Encrypt または TrustServerCertificate の設定に**関係なく**、すべてのデータがクライアントとサーバー間の "移動中" に暗号化されることが保証される。
 
 # 動的なデータ マスキング(DDM)
 
@@ -84,3 +132,10 @@ https://docs.microsoft.com/ja-jp/sql/relational-databases/security/encryption/tr
 - 保存データの暗号化
 - Azure SQL Database / Azure SQL Managed Instanceではデフォルトで有効
 - SQLを使用して有効化する. [手順](https://docs.microsoft.com/ja-jp/sql/relational-databases/security/encryption/transparent-data-encryption#enable-tde)
+
+# ラボ 11: Azure SQL データベースのセキュリティ保護
+
+- 60min
+- Azure Passサブスクリプションを使用します
+- 手順書: https://microsoftlearning.github.io/AZ-500JA-AzureSecurityTechnologies/
+- 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab11.md
