--- a/AZ-500/mod03/mod03-03.md
+++ b/AZ-500/mod03/mod03-03.md
@@ -2,19 +2,126 @@
 
 # データ主権
 
+■データの場所
+- Azureに保存したデータは、お客様が選択したリージョン内にとどまる
+- （明示的に設定した場合を除き）リージョンを超えてレプリケーションされることはない
+
+■ペアのリージョン
+
+https://docs.microsoft.com/ja-jp/azure/best-practices-availability-paired-regions
+
+- （一部の例外を除き基本的に）Azureのリージョンは1つの「地域」内でペアを形成する
+- 例: 東日本リージョンと西日本リージョンは「日本」地域のペアのリージョン
+- プラットフォームの更新（データセンターレベル）は、ペアのリージョンに（同時にではなく）順に実行される
+- ペアの両方のリージョンがダメージを受けた場合、早く復旧できる方から優先して復旧される
+- 例: 東日本リージョンを復旧し、それが完了してから、西日本リージョンを復旧する
+
 # Azure Storage アクセス
+
+ストレージアカウントにアクセスするには、原則として、認証（IDの確認）と承認（アクセス許可）が必要。
+
+https://docs.microsoft.com/ja-jp/azure/storage/common/authorize-data-access
+
+- Azure AD + RBACロール
+  - 概要: 組織のユーザー等のアクセス。Blob、Queue、[Table(preview)](https://docs.microsoft.com/en-us/azure/storage/tables/authorize-access-azure-active-directory)で利用可能。
+  - 認証: Azure AD
+  - 認可: RBACロール
+- 共有キー（ストレージアカウントのアクセスキー）
+  - 概要: フルアクセスを許可
+  - 認証: なし（アクセスキーを持っていること）
+  - 認可: フルアクセス
+- SAS（共有アクセス署名）
+  - 概要: 限定的なアクセスを許可
+  - 認証: なし（SASトークンやSAS URLを持っていること）
+  - 認可: SAS作成時に指定された操作を許可
+- 匿名アクセス
+  - 概要: Blob Storageのコンテナーレベルで読み取りを許可
+  - 認証: なし
+  - 認可: Blobのみ
+
+※AD DS / AAD DSについては後述（Azure Files の認証）。
+
+- AD DS / AAD DS
+  - 概要: ファイル共有のアクセス許可
+  - 認証: AD DS / AAD DS のID
+  - 認可: Windows ACL（NTFSアクセス許可）
+    - フル コントロール、変更、読み取り、書き込み、実行
 
 # Shared Access Signatures
 
+https://docs.microsoft.com/ja-jp/azure/storage/common/storage-sas-overview
+
+- SAS を作成するときに、クライアントがアクセスできる Azure Storage リソース、それらのリソースに対するアクセス許可、SAS の有効期間などの制約を指定。
+- すべての SAS はキーによって署名される。
+- 署名に使用するキーを所有している（あるいはキーを取得または生成できる）クライアントだけが、SASを生成することができます。
+
+|SASの種類|概要|署名に使用されるキー|アクセスポリシーのサポート|
+|-|-|-|-|
+|[アカウントSAS](https://docs.microsoft.com/ja-jp/azure/storage/common/storage-sas-overview#account-sas)|複数の Storage サービス (BLOB、File、Queue、Table) へのアクセスを委任。|ストレージ アカウント キー|なし|
+|[サービスSAS](https://docs.microsoft.com/ja-jp/azure/storage/common/storage-sas-overview#service-sas)|コンテナーまたは BLOB へのアクセスを委任。事前に作成された「アクセスポリシー」を関連付けてSASを作成するか、ポリシーを関連付けせずに「アドホックSAS」を作成します。|ストレージ アカウント キー|あり|
+|[ユーザー委任SAS](https://docs.microsoft.com/ja-jp/azure/storage/common/storage-sas-overview#user-delegation-sas)|コンテナーまたは BLOB へのアクセスを委任。|Azure ADの資格情報(credential)を使用して作成されたキー|なし|
+
+マイクロソフトでは、可能な限り「ユーザー委任 SAS」を使用することを推奨。
+
+■アドホックSAS
+- 開始時刻、有効期限、およびアクセス許可の情報をSAS内に埋め込む形で指定
+
+■（アドホックではない）SAS
+- 制約は「アクセスポリシー」の形で定義しておく
+- SASの生成時にその名前を指定するという形で、ポリシーを参照することができる
+- サービスSASのみ。
+
 # Azure AD ストレージ認証
+
+(上記「Azure AD + RBACロール」で説明済み)
 
 # Storage Service Encryption
 
+■Storage Service Encryption (SSE) 
+
+■保存時
+- ストレージに書き込まれるデータはすべてデフォルトで暗号化される(SSE)
+- 256 ビット AES
+
+■転送時
+- HTTPS または SMB3.0 により暗号化される
+
+■保存時の暗号化に使用するキー
+- Microsoftマネージドキー
+  - ストレージアカウントのすべてのサービスで利用可能
+- [カスタマーマネージドキー](https://docs.microsoft.com/ja-jp/azure/storage/common/customer-managed-keys-overview)（Azure Key Vault内に保存）
+  - Blob, Filesでのみ利用可能
+- [カスタマー指定(Customer-provided)のキー](https://docs.microsoft.com/ja-jp/azure/storage/blobs/encryption-customer-provided-keys)
+  - お客様独自のキー ストアに格納したキーを使用
+  - Blobのみ
+
 # BLOB データ保持ポリシー
+
+https://docs.microsoft.com/ja-jp/azure/storage/blobs/storage-blob-immutable-storage
+
+|データ保護の機能|概要|
+|-|-|
+|不変ストレージ（「時間ベースの保持」ポリシー）|コンテナーに「時間ベースの保持」というアクセスポリシー（「保持期間」の日数）を設定します。保持期間の間は、Blobの作成と読み取りは可能ですが、消去と変更はできません。保持期間の期限が切れると、Blobはその後も変更できない状態のままですが、削除はできるようになります。 |
+|不変ストレージ（「訴訟ホールド」ポリシー）|コンテナーに「訴訟ホールド」というアクセスポリシー（1つ～復数のタグ）を設定します。このポリシーが存在する間、Blobの作成と読み取りは可能ですが、変更または削除はできません。|
 
 # Azure Files の認証
 
+https://docs.microsoft.com/ja-jp/azure/storage/files/storage-files-identity-auth-active-directory-enable
+
+Azure Files（ストレージアカウントのファイル共有）では、サーバー メッセージ ブロック (SMB) 経由の ID ベースの認証が利用できる。
+- オンプレミス Active Directory Domain Services (AD DS) 
+- Azure Active Directory Domain Services (Azure AD DS) 
+
+
+ID が Azure ファイル共有内のデータにアクセスしようとした場合、その要求はドメイン サービス (AD DS または Azure AD DS) に送信され、ID が認証されます。 認証が成功した場合、Kerberos トークンが返されます。 クライアントは Kerberos トークンが含まれる要求を送信し、Azure ファイル共有はそのトークンを使用して要求を承認します。 Azure ファイル共有は、アクセス資格情報ではなく、Kerberos トークンのみを受信します。
+
 # 安全な転送が必須
+
+https://docs.microsoft.com/ja-jp/azure/storage/common/storage-require-secure-transfer
+
+既定では、ストレージ アカウントを作成すると、 [安全な転送が必須] プロパティが有効になります。
+
+ストレージ アカウントに [安全な転送が必須] プロパティを設定すると、セキュリティで保護された接続(HTTPS, SMB暗号化)からの要求のみを受け入れるようにストレージ アカウントを構成できます。
 
 # ラボ 12: サービス エンドポイントとストレージの保護
 
