--- a/AZ-500/mod03/mod03-01.md
+++ b/AZ-500/mod03/mod03-01.md
@@ -164,7 +164,7 @@ https://docs.microsoft.com/ja-jp/azure/key-vault/general/backup
 - [Azure Dedicated HSM](https://azure.microsoft.com/ja-jp/services/azure-dedicated-hsm/) 
   - FIPS 140-2 Level 3
 
-[比較表](pdf/mod07/キー管理サービス.pdf)
+[比較表](../../AZ-204/pdf/mod07/キー管理サービス.pdf)
 
 
 # ラボ 10: Key Vault (Always Encrypted を設定して、セキュアなデータを実装する)
