--- a/AZ-304/mod04-06-b2b.md
+++ b/AZ-304/mod04-06-b2b.md
@@ -1,2 +1,125 @@
-# Azure Active Directory B2B
 
+# Azure AD External Identities
+
+■Azure AD External Identitiesのソリューション
+
+※「外部ID」とも
+
+「B2Bコラボレーション」と「AzureAD B2C」が含まれる。
+
+- Azure AD External Identities（外部ID）
+  - B2B コラボレーション
+    - 関連会社等のユーザーとコラボレーション（共同作業）する場合に利用
+    - 外部ユーザーを自分のテナントに "ゲスト" ユーザーとして招待
+  - Azure AD B2C
+    - 一般ユーザーを、自社で開発したアプリケーションにサインインさせる場合に利用
+    - 消費者、顧客、または一般ユーザーが、自分のGoogle アカウントなどを使用してサインイン
+
+※B2BとB2C
+- B2B: Business to Business
+- B2C: Business to Consumer
+
+**本ページでは以降B2B コラボレーション（Azure AD B2B）について解説。**
+
+
+# Azure AD B2B コラボレーション
+
+■Azure AD B2B コラボレーションとは
+
+外部ユーザーをゲストとして招待する機能。
+
+外部ユーザーに、自分の組織で管理しているアプリケーションへのアクセスを許可することができる。
+
+■Azure AD B2B でサポートされる「IDプロバイダー」
+
+※IDプロバイダー（IdP）: IDの登録、認証などを提供するサービス。Azure ADもIDプロバイダーの一種。
+
+https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/azure-ad-account
+
+
+B2Bでは以下のIDプロバイダーを使用できる。
+
+- 設定不要
+  - [Azure AD（職場または学校アカウント）](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/azure-ad-account)
+  - [Microsoftアカウント](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/microsoft-account)
+- 設定が必要
+  - [Gmail アカウント（Googleフェデレーション）](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/google-federation)
+    - ※Google Workspace ドメインとのフェデレーションを行うには「SAML および WS-Fed ベースの ID プロバイダー」を使用
+  - [Facebook](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/facebook-federation)
+  - [SAML および WS-Fed ベースの ID プロバイダー](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/direct-federation)
+
+
+■ゲストユーザーの招待の流れ
+
+※招待するユーザーのIDプロバイダーが「Azure ADテナント」である場合の例
+
+招待を行うテナントの管理者ユーザーは、自分のテナント（下の図のテナント1）に「ゲストユーザー」を作成する。
+
+ゲストユーザーには、通常のユーザーと同じように、グループに所属させたり、[アプリを割り当てたり](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/b2b-quickstart-add-guest-users-portal#assign-an-app-to-the-guest-user)、Azure ADロール、Azure RBACロールを割り当てることができる。
+
+このとき、ゲストユーザーのメールアドレス宛てに、招待メールが送信される。
+
+```
+Azure ADテナント1（自社）
+└ゲストユーザー
+
+↓招待メール
+
+Azure ADテナント2（関連会社等）
+└ユーザー（招待中）
+```
+
+[招待を受けたユーザーは、届いた招待メールのリンクをクリックして、招待を受け入れる（招待の承認）。](https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/b2b-quickstart-add-guest-users-portal#accept-the-invitation)
+
+```
+Azure ADテナント1（自社）
+└ゲストユーザー
+
+Azure ADテナント2（関連会社等）
+└ユーザー（招待を受理）
+```
+
+招待されたユーザーは、**自分のテナント（上の図でのテナント2）でサインインする。**
+
+サインインが完了したら、テナント1のゲストユーザーとして、テナント1（のアプリケーションや、Azure サブスクリプション）を利用することができる。
+
+
+■ゲストユーザーの招待方法
+
+- Azure portalから: https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/b2b-quickstart-add-guest-users-portal
+- PowerShellから: https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/b2b-quickstart-invite-powershell
+- CSVを使用して、一括で多数のユーザーを招待する: https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/bulk-invite-powershell
+
+■ゲストユーザーがメールを受け取れない場合
+
+
+
+ゲストユーザーがメールを受け取れない場合でも、管理者はPowerShellを使ってユーザーを招待することができる。
+
+```
+# コマンドのインストール
+Install-Module AzureAD
+
+# ユーザーで認証
+Connect-AzureAD
+
+# メールを送らずに招待
+New-AzureADMSInvitation `
+  -InvitedUserEmailAddress <招待するユーザーのUPN(メールアドレス形式)> `
+  -InvitedUserDisplayName <ゲスト ユーザーの表示名> `
+  -InviteRedirectUrl <招待へ承諾後、アクセスするURL>  `
+  -SendInvitationMessage $false
+```
+
+ゲストユーザーは「直接リンク」を使用して、「アプリアクセスパネル」や「Azure portal」にアクセスすることができる。
+
+https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/redemption-experience#redemption-through-a-direct-link
+
+Azure portalの場合: `https://portal.azure.com/<tenant id>`
+
+■B2Bのよくある質問・トラブルシューティング
+
+- Azure における ゲスト ユーザー招待 (B2B) のよくある質問(by Azure Identity サポート チーム)
+  - https://jpazureid.github.io/blog/azure-active-directory/b2bfaq/
+- B2Bのトラブルシューティング
+  - https://docs.microsoft.com/ja-jp/azure/active-directory/external-identities/troubleshoot
