--- a/AZ-500/mod02/mod02-01.md
+++ b/AZ-500/mod02/mod02-01.md
@@ -98,14 +98,16 @@ https://docs.microsoft.com/ja-jp/archive/blogs/jpitpro/azure-ddos-protection-for
 
 - いずれもネットワーク攻撃 (レイヤー 3、4) からの保護機能が提供される
 - Basic
-  - Azure のすべてのプロパティは、追加コストなしで Azure のインフラストラクチャ DDoS (Basic) Protection によって保護される。
-  - すべての Azure サービスが保護されます。
+  - すべての Azure サービスが保護される。
+  - デフォルトで有効
+  - 追加コストなし
 - Standard
+  - オプション
+  - 仮想ネットワーク上のリソース（パブリック IP アドレスが付与されたリソース）の保護
   - 1 か月あたり $2,944 の固定月額料金
+  - リソースごとに1 か月あたり $30 の追加料金
   - 最大 100 のパブリック IP アドレスに対応
-  - 追加のリソースを保護すると、1 か月あたりリソースごとに $30 の追加料金が発生します。
-- テナントの場合、複数のサブスクリプションに対して 1 つの DDoS 保護プランを使用できるため、複数の DDoS 保護プランを作成する必要はありません。
-- 仮想ネットワーク上のすべてのリソースが直ちに保護されます。
+  - 1つのテナントで、複数のサブスクリプションに対して 1 つの DDoS 保護プランを使用できるため、複数の DDoS 保護プランを作成する必要はありません。
 
 # Azure Firewall
 
