--- a/AZ-500/mod02-03-02-paw.md
+++ b/AZ-500/mod02-03-02-paw.md
@@ -1,14 +1,19 @@
-~~※本ページの一次情報は2021/1現在、Microsoft Docsからは削除されてしまっているが、[Googleキャッシュ(2020/12/17取得時点のもの)で読むことができる](https://webcache.googleusercontent.com/search?q=cache:W_2CyuTTNacJ:https://docs.microsoft.com/ja-jp/windows-server/identity/securing-privileged-access/privileged-access-workstations+&cd=1&hl=ja&ct=clnk&gl=jp)。~~ 2021/3/24現在、Googleのキャッシュからも削除されている。
-
 # 特権アクセス ワークステーション
 
 Privileged Access Workstation (PAW)
+
+参考: 
+- Microsoftセキュリティのベストプラクティス: [特権アクセス ストーリーの一部としてのデバイスのセキュリティ保護](https://docs.microsoft.com/ja-jp/security/compass/privileged-access-devices#device-roles-and-profiles) 
+- Microsoft Tech Communityのブログ記事: [Privileged Access Workstation(PAW)](https://techcommunity.microsoft.com/t5/data-center-security/privileged-access-workstation-paw/ba-p/372274)
+  - ページ下部に更に詳しい情報へのリンクがある
+- [Privileged Access Workstations (PAWs)](https://thycotic.com/glossary/privileged-access-workstations-paws/)
+  - PAWの一般的な解説
 
 「機密性の高いタスク」専用のワークステーション。
 
 日常的に使用するワークステーションと分けることで、さまざまな攻撃から、機密情報とワークステーションを防御する。
 
-※ワークステーション: 専用のハードウェアを使用する方法と、OSの仮想化機能を使用して、ユーザーが普段使用しているデバイス上にPAWを作る方法がある。
+※ワークステーション: 専用のハードウェアを使用する方法と、OSの仮想化機能を使用して、ユーザーが普段使用しているデバイス上にPAWを作る方法、VMを使用する方法など、PAWを実現する方法はいくつかある。
 
 # PAWに推奨されるOS
 
