--- a/AZ-500/mod02/mod02-03.md
+++ b/AZ-500/mod02/mod02-03.md
@@ -8,7 +8,7 @@
   - テンプレートによる仮想マシンの定期的な再作成
   - Azure Automationによる更新の自動化
   - ディスクの暗号化
-- Azure Security Centerの「推奨事項」の活用
+- Microsoft Defender for Cloudの「推奨事項」の活用
 
 # エンドポイント保護
 
@@ -111,16 +111,16 @@ https://support.microsoft.com/ja-jp/windows/windows-%E3%82%BB%E3%82%AD%E3%83%A5%
 - 別のウイルス対策アプリがインストールされている場合、Windows Defender ウイルス対策は自動的にオフになる。
 - 他のウイルス対策アプリをアンインストールすると、Microsoft Defender ウイルス対策が自動的に有効になる。
 
-# Azure Security Centerの推奨事項
+# Microsoft Defender for Cloudの推奨事項
 
 https://docs.microsoft.com/ja-jp/azure/security-center/security-center-recommendations
 
-■Azure Security Centerとは？
+■Microsoft Defender for Cloudとは？
 
 - Azureに組み込まれた、統合的なセキュリティ管理システム
 - くわしくはモジュール4で解説
 
-■Azure Security Centerの推奨事項とは？
+■Microsoft Defender for Cloudの推奨事項とは？
 
 - 継続的な評価を行い、セキュリティに関する推奨事項を表示する機能
 - Azure リソースを定期的に分析し、見つかった脆弱性に対するアクションを推奨事項として提案してくれる
@@ -142,8 +142,8 @@ https://docs.microsoft.com/ja-jp/azure/security-center/update-regulatory-complia
 - 既定で、すべてのサブスクリプションに Azure セキュリティ ベンチマーク が割り当てられている
 - Azure Policyの「イニシアチブ」として実装されている。
 
-Azure Security Centerでの設定確認
+Microsoft Defender for Cloudでの設定確認
 
-- Azure portal＞セキュリティ センター＞クラウド セキュリティ＞規制コンプライアンス＞コンプライアンス ポリシーの管理
+- Azure portal＞Microsoft Defender for Cloud＞クラウド セキュリティ＞規制コンプライアンス＞コンプライアンス ポリシーの管理
 - デフォルトで、「Azure Security Benchmark」が有効化されている。
 
