--- a/AZ-500/mod03/mod03-04.md
+++ b/AZ-500/mod03/mod03-04.md
@@ -133,6 +133,25 @@ https://docs.microsoft.com/ja-jp/sql/relational-databases/security/encryption/tr
 - Azure SQL Database / Azure SQL Managed Instanceではデフォルトで有効
 - SQLを使用して有効化する. [手順](https://docs.microsoft.com/ja-jp/sql/relational-databases/security/encryption/transparent-data-encryption#enable-tde)
 
+# Microsoft Defender for SQL
+
+https://docs.microsoft.com/ja-jp/azure/azure-sql/database/azure-defender-for-sql
+
+- 概要
+  - 高度な SQL セキュリティ機能のための統合パッケージ
+- 機能
+  - [脆弱性評価](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/sql-vulnerability-assessment?tabs=azure-powershell)
+    - データベースの潜在的な脆弱性を検出
+  - [Advanced Threat Protection](https://docs.microsoft.com/ja-jp/azure/azure-sql/database/threat-detection-overview): データベースに対する脅威を示す異常な行動を検出
+- 対象サービス
+  - Azure SQL Database
+  - Azure SQL Managed Instance
+  - Azure Synapse Analytics
+- 有効化方法
+  - サブスクリプション レベル
+  - リソース レベル
+
+
 # ラボ 11: Azure SQL データベースのセキュリティ保護
 
 - 60min
