--- a/AZ-500/mod03/mod03-04.md
+++ b/AZ-500/mod03/mod03-04.md
@@ -22,6 +22,17 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/azure-sql-iaas-vs-paas-what-is-
 
 https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#authentication
 
+- 認証
+  - SQL認証
+    - 「サーバー管理者」のユーザー名とパスワードを使った認証
+    - 「サーバー」作成時に指定される
+  - Azure Active Directory認証
+    - Azure ADのIDを使用した認証
+- 承認
+  - [データベース レベルのロール](https://docs.microsoft.com/ja-jp/sql/relational-databases/security/authentication-access/database-level-roles?view=sql-server-ver15) を、ユーザーに割り当てる。
+  - ALTER ROLE文を使用
+  - 注: SQL Serverで使用される [サーバーレベルのロール](https://docs.microsoft.com/ja-jp/sql/relational-databases/security/authentication-access/server-level-roles?view=sql-server-ver15)は、SQL DatabaseやAzure Synapse Analyticsでは使用できない。
+
 # SQL Database ファイアウォール
 
 https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#network-security
@@ -150,7 +161,6 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/azure-defender-for-sql
 - 有効化方法
   - サブスクリプション レベル
   - リソース レベル
-
 
 # ラボ 11: Azure SQL データベースのセキュリティ保護
 
