--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -2,9 +2,9 @@
 
 ## 準備
 
-- [開発環境として使用するWindows VMを起動](vm-create.md)
-- [Windows VMにリモートデスクトップで接続](rdp.md)
+- [開発環境として使用するWindows VMを起動](vm/vm-create.md)
+- [Windows VMにリモートデスクトップで接続](vm/rdp.md)
 - VMに、必要なツールをインストール
   - [.NET SDK](dotnet6.md)
-  - [Visual Studio Code](vscode-install.md)
-  - [Visual Studio Codeの拡張機能](vscode-extensions.md)
+  - [Visual Studio Code](vscode/vscode-install.md)
+  - [Visual Studio Codeの拡張機能](vscode/vscode-extensions.md)
