--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -4,7 +4,16 @@
 
 - [開発環境として使用するWindows VMを起動](vm/vm-create.md)
 - [Windows VMにリモートデスクトップで接続](vm/rdp.md)
-- VMに、必要なツールをインストール
-  - [.NET SDK](dotnet6.md)
-  - [Visual Studio Code](vscode/vscode-install.md)
-  - [Visual Studio Codeの拡張機能](vscode/vscode-extensions.md)
+- 接続したVM内で、以下の設定を行う
+  - [Microsoft Edge の起動と初期設定](edge.md)
+  - 必要なツールをインストール
+    - [.NET SDK](dotnet6.md)
+    - [Visual Studio Code](vscode/vscode-install.md)
+    - [Visual Studio Codeの拡張機能](vscode/vscode-extensions.md)
+  - [Visual Studio Codeで、Azureにサインイン](vscode-azure/signin.md)
+
+## App Service
+
+- [Webアプリの作成](webapp/webapp-create.md)
+- [WebアプリをApp Serviceにデプロイする](webapp/webapp-deploy.md)
+
