--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -1,6 +1,6 @@
 # AZ-204
 
-## 準備
+## ハンズオン: 準備
 
 - [開発環境として使用するWindows VMを起動](vm/vm-create.md)
 - [Windows VMにリモートデスクトップで接続](vm/rdp.md)
@@ -12,8 +12,14 @@
     - [Visual Studio Codeの拡張機能](vscode/vscode-extensions.md)
   - [Visual Studio Codeで、Azureにサインイン](vscode-azure/signin.md)
 
-## App Service
+## ハンズオン: App Service
 
 - [Webアプリの作成](webapp/webapp-create.md)
 - [WebアプリをApp Serviceにデプロイする](webapp/webapp-deploy.md)
+
+## ハンズオン: Azure Functions
+
+- [関数アプリの作成](functions/function-create-project.md)
+- [関数アプリのデバッグ](functions/function-debug.md)
+- [関数アプリをAzure Functionsにデプロイする](functions/function-deploy.md)
 
