--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -23,3 +23,8 @@
 - [関数アプリのデバッグ](functions/function-debug.md)
 - [関数アプリをAzure Functionsにデプロイする](functions/function-deploy.md)
 
+## ハンズオン: クリーンナップ（リソースの削除）
+
+- [Cloud Shellを開く](cloudshell.md)
+- [不要なリソースグループを一括削除する](cleanup.md)
+
