--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -23,6 +23,12 @@
 - [関数アプリのデバッグ](functions/function-debug.md)
 - [関数アプリをAzure Functionsにデプロイする](functions/function-deploy.md)
 
+
+## ハンズオン: Blob Storage
+
+- ストレージアカウントの作成
+- 
+
 ## ハンズオン: クリーンナップ（リソースの削除）
 
 - [Cloud Shellを開く](cloudshell.md)
