--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -27,7 +27,18 @@
 ## ハンズオン: Blob Storage
 
 - ストレージアカウントの作成
-- 
+- 昨日作成したVMで、Visual Studio Codeを使用してプロジェクトを作る
+  - Visual Studio Codeを起動し、ターミナルを開き、下記を投入
+    ```
+    cd ~/Documents
+    dotnet new consoel -n blobapp1
+    code -r blobapp1
+    ```
+- [サンプルコード](../az-204/sample/blob/Program.cs) を Program.cs に貼り付けて実行(dotnet run)
+ （適当にストレージアカウントを作り、接続文字列をコピーし、
+    サンプルコード実行時に指定してください）
+- Azure公式ドキュメントの「[クイックスタート](https://docs.microsoft.com/ja-jp/azure/storage/blobs/storage-quickstart-blobs-dotnet?tabs=environment-variable-windows)」「[サンプル](https://docs.microsoft.com/ja-jp/azure/storage/common/storage-samples-dotnet?toc=/azure/storage/blobs/toc.json)」を確認
+- [AZ-204ラボ](https://github.com/MicrosoftLearning/AZ-204JA-DevelopingSolutionsforMicrosoftAzure/blob/master/Instructions/Labs/AZ-204_lab_03.md)を確認（余裕があれば実施）
 
 ## ハンズオン: クリーンナップ（リソースの削除）
 
