--- a/handson/az-204.md
+++ b/handson/az-204.md
@@ -34,6 +34,7 @@
     dotnet new consoel -n blobapp1
     code -r blobapp1
     ```
+- 開かれたプロジェクトで再度 ターミナルを開き `dotnet add package azure.storage.blobs` を実行(プロジェクトに、BlobのAzure SDKを追加)
 - [サンプルコード](../az-204/sample/blob/Program.cs) を Program.cs に貼り付けて実行(dotnet run)
  （適当にストレージアカウントを作り、接続文字列をコピーし、
     サンプルコード実行時に指定してください）
